🪟 🐛 Bug fix for text wrapping in tables (#8106)

--- a/airbyte-webapp/src/components/EntityTable/ConnectionTable.module.scss
+++ b/airbyte-webapp/src/components/EntityTable/ConnectionTable.module.scss
@@ -4,8 +4,8 @@ th.width30 {
   width: 30%;
 }
 
-th.width10 {
-  width: 10%;
+th.width20 {
+  width: 20%;
 }
 
 .thEnabled {
