--- a/airbyte-webapp/src/pages/connections/StreamStatusPage/StreamsList.module.scss
+++ b/airbyte-webapp/src/pages/connections/StreamStatusPage/StreamsList.module.scss
@@ -28,7 +28,11 @@
   }
 
   .statusHeader {
-    width: 0; // makes the column width dynamic, matching the widest content in this column
+    width: 0;
+  }
+
+  .statusCell {
+    white-space: nowrap;
   }
 
   .actionsHeader {
